[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-hybrid-fl-quantum-med"
version = "0.1.0"
description = "Hybrid quantum–classical federated learning with homomorphic encryption and zk verifiability."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Ird C" }
]

dependencies = [
  "numpy",
  "torch",
  "flwr",
  "pennylane",
  "tenseal",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]
